--- a/login/templates/login/login_page.html
+++ b/login/templates/login/login_page.html
@@ -16,11 +16,11 @@
           {% csrf_token %}
           <div class="mb-3">
             <input
-              type="text"
+              type="email"
               class="form-control"
-              id="username"
-              name="username"
-              placeholder="Name"
+              id="email"
+              name="email"
+              placeholder="email@email.com"
             />
           </div>
           <div class="mb-3">
