--- a/shared/templates/shared/common.html
+++ b/shared/templates/shared/common.html
@@ -1,1 +1,5 @@
 <p>Common User</p>
+{% comment %} show the user name {% endcomment %}
+<p>{{ user.username }}</p>
+<p>{{ user.email }}</p>
+<p>IS THE USER ADMIN?!!!: {{ user.profile.is_admin }}</p>
