integrated google login

--- a/login/templates/login/login_page.html
+++ b/login/templates/login/login_page.html
@@ -37,6 +37,6 @@
       </div>
     </div>
     {% load socialaccount %}
-    <a href="{% provider_login_url 'google' %}?next=home">Sign in with Google</a>
+    <a href="{% provider_login_url 'google' %}?next=/">Sign in with Google</a>
   </body>
 </html>
