--- a/login/templates/login/login_page.html
+++ b/login/templates/login/login_page.html
@@ -10,7 +10,7 @@
     <div class="d-flex justify-content-center align-items-center vh-100">
       <div class="text-center">
         <div class="mb-3">
-          <h1>Login with Google</h1>
+          <!-- <h1>Login with Google</h1> -->
         </div>
         <form action="{% url 'login:login_request' %}" method="POST">
           {% csrf_token %}
@@ -34,9 +34,11 @@
           </div>
           <button type="submit" class="btn btn-primary">Sign in</button>
         </form>
+        {% load socialaccount %}
+        <div class="mt-3">
+          <a href="{% provider_login_url 'google' %}?next=/" class="btn btn-secondary">Sign in with Google</a>
+      </div>
       </div>
     </div>
-    {% load socialaccount %}
-    <a href="{% provider_login_url 'google' %}?next=/">Sign in with Google</a>
   </body>
 </html>
