adjusting google login landing for account type

--- a/login/templates/login/login_page.html
+++ b/login/templates/login/login_page.html
@@ -36,7 +36,7 @@
         </form>
         {% load socialaccount %}
         <div class="mt-3">
-          <a href="{% provider_login_url 'google' %}?next=login_request/" class="btn btn-secondary">Sign in with Google</a>
+          <a href="{% provider_login_url 'google' %}?next='/login_request/" class="btn btn-secondary">Sign in with Google</a>
       </div>
       </div>
     </div>
