added more info to the page

--- a/history/templates/history/case.html
+++ b/history/templates/history/case.html
@@ -2,5 +2,6 @@
 
 {% block content %}
 <p>Report {{ id }}</p>
-<p>Report Text {{report_model.report_text}}</p>
+<p>Report Text: {{report.report_text}}</p>
+<p>Status {{report.status}}</p>
 {% endblock %}
