--- a/history/templates/history/lookup.html
+++ b/history/templates/history/lookup.html
@@ -5,7 +5,14 @@
     <div class="text-center">
     <form method="post">
         {% csrf_token %}
-        {{ form.as_p }}
+        <div class="form-group">
+            <label for="id_username">Username</label>
+            {{ form.id }}
+        </div>
+        <div class="form-group">
+            <label for="id_user_password">Password</label>
+            {{ form.user__password }}
+        </div>
     <button type="submit" class="btn btn-primary">Submit</button>
     </div>
 </div>
