fixed url reference error

--- a/login/templates/login/login_page.html
+++ b/login/templates/login/login_page.html
@@ -39,7 +39,7 @@
           <a href="{% provider_login_url 'google' %}" class="btn btn-secondary">Sign in with Google</a>
       </div>
       <div class="mt-3">
-        <a href="{% url 'anonymous_submission' %}" class="btn btn-secondary">Submit An Anonymous Report</a>
+        <a href="{% url 'submit:anonymous_submission' %}" class="btn btn-secondary">Submit An Anonymous Report</a>
       </div>
     </div>
   </body>
