--- a/submit/templates/submit/report.html
+++ b/submit/templates/submit/report.html
@@ -1,6 +1,6 @@
 {% extends 'submit/base.html' %}
 
-{% block title %}Report: Supporting Documentation{% endblock %}
+{% block title %}Report{% endblock %}
 
 {% block content %}
     {% load static %}
@@ -10,6 +10,7 @@
 {% block footer %}
     <span class="text-muted">temp, testing footer</span>
 {% endblock %}
+
 {#<!DOCTYPE html>#}
 {#<html lang="en">#}
 {#<head>#}
