--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -28,7 +28,7 @@
               <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="{% url 'submit:start_submission' %}">Link</a>
+              <a class="nav-link" href="#">Link</a>
             </li>
             <li class="nav-item">
               <a class="nav-link disabled" href="#">Disabled</a>
