Change name of block content in base html so other files show up

--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -44,7 +44,7 @@
 
     <!-- Begin page content -->
     <main role="main" class="container">
-      {% block main %}
+      {% block content %}
             <!-- actual submission content -->
       {% endblock %}
     </main>
