Change name of block content to block main in html files so contents of files show up

--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -44,7 +44,7 @@
 
     <!-- Begin page content -->
     <main role="main" class="container">
-      {% block content %}
+      {% block main %}
             <!-- actual submission content -->
       {% endblock %}
     </main>
