--- a/submit/templates/submit/report.html
+++ b/submit/templates/submit/report.html
@@ -2,7 +2,7 @@
 
 {% block title %}Report Submission{% endblock %}
 
-{% block content %}
+{% block main %}
     {% load static %}
     <!-- Incident Report Form -->
     <h1>Incident Report Form</h1>
