--- a/submit/templates/submit/start_submission.html
+++ b/submit/templates/submit/start_submission.html
@@ -1,6 +1,6 @@
 {% extends 'submit/base.html' %}
 {% block title %}Start Submission{% endblock %}
-{% block content %}
+{% block main %}
     <h1>Start Submission</h1>
     <form method="post">
         {% csrf_token %}
