--- a/submit/templates/submit/submission_complete.html
+++ b/submit/templates/submit/submission_complete.html
@@ -1,10 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-</head>
-<body>
-
-</body>
-</html>
+{% extends 'submit/base.html' %}
+{% block title %}Submission Complete{% endblock %}
+{% block main %}
+    <h1>You have successfully submitted a report!</h1>
+{% endblock %}
