fixed unclosed blocktag

--- a/submit/templates/submit/report.html
+++ b/submit/templates/submit/report.html
@@ -1,5 +1,4 @@
-{% extends 'submit/base.html' %} {% block title %}Report Submission{% endblock
-%} {% block main %} {% load static %}
+{% extends 'submit/base.html' %} {% block title %}Report Submission{% endblock%} {% block main %} {% load static %}
 <!-- Incident Report Form -->
 <div class="container">
   <h1 class="mt-5">Incident Report Form</h1>
