--- a/shared/templates/shared/upload_test.html
+++ b/shared/templates/shared/upload_test.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h1>Upload a File</h1>
-    <form action="{% url 'upload_file' %}" method="post" enctype="multipart/form-data">
+    <form action="" method="post" enctype="multipart/form-data">
         {% csrf_token %}
         <input type="file" name="file">
         <button type="submit">Upload</button>
