--- a/shared/templates/shared/view_files.html
+++ b/shared/templates/shared/view_files.html
@@ -9,7 +9,7 @@
     <h1>View Files</h1>
     <ul>
         {% for file in files %}
-            <li><a href="{{ file.url }}">Testing Please Work</a></li>
+            <li><a href="{{ file.file.url }}">Testing Please Work</a></li>
         {% endfor %}
     </ul>
 </body>
