set up navbar links + login icon

--- a/submit/static/submit/sticky-footer-navbar.css
+++ b/submit/static/submit/sticky-footer-navbar.css
@@ -18,6 +18,12 @@ body {
   background-color: #f5f5f5;
 }
 
+/* navbar styles
+-------------------------------------------------- */
+.navbar-custom {
+    background-color: #151f52; /* Navy blue */
+}
+
 
 /* Custom page CSS
 -------------------------------------------------- */
