--- a/submit/templates/submit/start_submission.html
+++ b/submit/templates/submit/start_submission.html
@@ -7,3 +7,9 @@
         <button type="submit">Start a Report</button>
     </form>
 {% endblock %}
+
+{% block footer %}
+    <div class="text-center text-muted p-3">
+    CS3240 Team A22
+  </div>
+{% endblock %}
