--- a/submit/templates/submit/report.html
+++ b/submit/templates/submit/report.html
@@ -1,4 +1,6 @@
-{% extends 'submit/base.html' %} {% block title %}Report Submission{% endblock%} {% block main %} {% load static %}
+{% extends 'submit/base.html' %} {% block title %}Report Submission{% endblock%}
+{% block main %}
+    {% load static %}
 <!-- Incident Report Form -->
 <div class="container">
   <h1 class="mt-5">Incident Report Form</h1>
@@ -44,32 +46,35 @@
       </div>
     </div>
     <!-- Involved Students Section -->
-    <div class="section">
-      <h2>Involved Students</h2>
+    <div class="section"  style="margin-top: 20px; ">
+      <h2>Involved Students/Staff</h2>
+        <h5>Please provide their UVA computing ID</h5>
       <div class="form-group">
-        <label for="student1">Student 1:</label>
+        <label for="student1">Involved 1:</label>
         <input
           type="text"
           id="student1"
           name="student1"
           class="form-control"
+          placeholder="eg. mst3k"
           required
         />
       </div>
       <div class="form-group">
-        <label for="student2">Student 2:</label>
+        <label for="student2">Involved 2:</label>
         <input
           type="text"
           id="student2"
           name="student2"
           class="form-control"
-          required
-        />
+          placeholder="eg. mst3k"
+          />
+          <!-- should not be required to have 2? -->
       </div>
       <!-- Add more fields as needed -->
     </div>
     <!-- Incident Summary Section -->
-    <div class="section">
+    <div class="section" style="margin-top: 20px;">
       <h2>Incident Summary</h2>
       <div class="form-group">
         <label for="summary">Summary:</label>
@@ -83,7 +88,7 @@
       </div>
     </div>
     <!-- Attach Files Section -->
-    <div class="section">
+    <div class="section"  style="margin-top: 20px; ">
       <h2>Attach Files(.txt, .pdf, .jpg)</h2>
       <div class="form-group">
         <label for="fileUpload">Upload Files:</label>
@@ -99,6 +104,10 @@
     <button type="submit" class="btn btn-primary">Submit</button>
   </form>
 </div>
-{% endblock %} {% block footer %}
-<span class="text-muted">temp, testing footer</span>
+{% endblock %}
+
+{% block footer %}
+    <div class="text-center text-muted p-3">
+    CS3240 Team A22
+  </div>
 {% endblock %}
