--- a/shared/templates/shared/view_files.html
+++ b/shared/templates/shared/view_files.html
@@ -10,7 +10,7 @@
     <ul>
         {% for file in files %}
             <!-- GPT -->
-            <img src="{% url 'render_object_from_s3' s3_object_url='your_s3_object_url' %}" alt="Image">
+            <img src="{% url 'render_object_from_s3' s3_object_url='file.get_file_url' %}" alt="Image">
         {% endfor %}
     </ul>
 </body>
