updated submission html and added proper links for admin/common/anonymous accounts in navbar

--- a/submit/templates/submit/report.html
+++ b/submit/templates/submit/report.html
@@ -1,4 +1,5 @@
-{% extends 'submit/base.html' %} {% block title %}Report Submission{% endblock%}
+{% extends 'submit/base.html' %}
+{% block title %}Report Submission{% endblock%}
 {% block main %}
     {% load static %}
 <!-- Incident Report Form -->
@@ -107,7 +108,5 @@
 {% endblock %}
 
 {% block footer %}
-    <div class="text-center text-muted p-3">
-    CS3240 Team A22
-  </div>
+    <div class="text-center text-muted p-3">© 2024 Team A22, SP24 CS3240</div>
 {% endblock %}
