--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -43,9 +43,15 @@
           </ul>
           <ul class="navbar-nav ml-auto">
               <!-- Conditional rendering based on user's sign-in status -->
-              {% if user.is_authenticated %}
+              {% if user.profile.is_admin %}
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link" href="/shared/admin_home">
+                    <i class="fas fa-sign-in-alt"></i> Account
+                </a>
+              </li>
+              {% else if user.is_authenticated %}
+              <li>
+                <a class="nav-link" href="/shared/common">
                     <i class="fas fa-sign-in-alt"></i> Account
                 </a>
               </li>
