--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -18,6 +18,7 @@
 
   <body>
     <header>
+        <div class="top-strip"></div>
       <!-- Fixed navbar -->
       <nav class="navbar navbar-expand-md navbar-dark fixed-top navbar-custom">
         <a class="navbar-brand ps-4" href="#">Hoos Reporting Honor</a>
@@ -43,23 +44,23 @@
           </ul>
           <ul class="navbar-nav ml-auto">
               <!-- Conditional rendering based on user's sign-in status -->
-              {% if user.profile.is_admin %}
-              <li class="nav-item">
-                <a class="nav-link" href="/shared/admin_home">
-                    <i class="fas fa-sign-in-alt"></i> Account
-                </a>
-              </li>
-              {% else if user.is_authenticated %}
-              <li>
-                <a class="nav-link" href="/shared/common">
-                    <i class="fas fa-sign-in-alt"></i> Account
-                </a>
-              </li>
-              {% else %}
-              <li class="nav-item">
-                <a class="nav-link" href="/login">Sign In</a>
-              </li>
-              {% endif %}
+{#              {% if user.profile.is_admin %}#}
+{#              <li class="nav-item">#}
+{#                <a class="nav-link" href="/shared/admin_home">#}
+{#                    <i class="fas fa-sign-in-alt"></i> Account#}
+{#                </a>#}
+{#              </li>#}
+{#              {% else if user.is_authenticated %}#}
+{#              <li>#}
+{#                <a class="nav-link" href="/shared/common">#}
+{#                    <i class="fas fa-sign-in-alt"></i> Account#}
+{#                </a>#}
+{#              </li>#}
+{#              {% else %}#}
+{#              <li class="nav-item">#}
+{#                <a class="nav-link" href="/login">Sign In</a>#}
+{#              </li>#}
+{#              {% endif %}#}
             </ul>
         </div>
       </nav>
