--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -44,23 +44,23 @@
           </ul>
           <ul class="navbar-nav ml-auto">
               <!-- Conditional rendering based on user's sign-in status -->
-{#              {% if user.profile.is_admin %}#}
-{#              <li class="nav-item">#}
-{#                <a class="nav-link" href="/shared/admin_home">#}
-{#                    <i class="fas fa-sign-in-alt"></i> Account#}
-{#                </a>#}
-{#              </li>#}
+              {% if user.profile.is_admin %}
+              <li class="nav-item">
+                <a class="nav-link" href="/shared/admin_home">
+                    <i class="fas fa-sign-in-alt"></i> Account
+                </a>
+              </li>
 {#              {% else if user.is_authenticated %}#}
 {#              <li>#}
 {#                <a class="nav-link" href="/shared/common">#}
 {#                    <i class="fas fa-sign-in-alt"></i> Account#}
 {#                </a>#}
 {#              </li>#}
-{#              {% else %}#}
-{#              <li class="nav-item">#}
-{#                <a class="nav-link" href="/login">Sign In</a>#}
-{#              </li>#}
-{#              {% endif %}#}
+              {% else %}
+              <li class="nav-item">
+                <a class="nav-link" href="/login">Sign In</a>
+              </li>
+              {% endif %}
             </ul>
         </div>
       </nav>
