--- a/history/templates/history/dashboard.html
+++ b/history/templates/history/dashboard.html
@@ -22,7 +22,7 @@
     Anonymous
     {% endif %}
       <td>
-        <a href="{% url 'history:submission_detail' report.id %}">View</a>
+        <a href="{% url 'history:report' report.id %}">View</a>
       </td>
     </tr>
     {% endfor %}
