created report html

--- a/history/templates/history/dashboard.html
+++ b/history/templates/history/dashboard.html
@@ -1,5 +1,5 @@
 {% extends 'submit/base.html' %}
-{% block title %}Report Submission{% endblock%}
+{% block title %}Dashboard{% endblock%}
 {% block main %}
 <h1>All Reports</h1>
 <table>
