edit so its the right value

--- a/history/templates/history/report.html
+++ b/history/templates/history/report.html
@@ -35,7 +35,7 @@
 
 <form action="", method="post">
     {% csrf_token %}
-    <input type="hidden" name="status" value="Approved">
+    <input type="hidden" name="status" value="resolved">
     <button type="submit" class="btn btn-primary">Resolve</button>
 </form>
 
