--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -13,6 +13,7 @@
     <!-- CSS for navbar + sticky footer (could be applied to the rest of the project) -->
     <link href="../../static/submit/sticky-footer-navbar.css" rel="stylesheet">
     <link href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Franklin+Gothic&display=swap" rel="stylesheet">
 
   </head>
 
