--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -30,6 +30,9 @@
             <li class="nav-item active">
               <a class="nav-link" href="https://honor.virginia.edu/">Honor Code<span class="sr-only">(current)</span></a>
             </li>
+              <li class="nav-item active">
+              <a class="nav-link" href="/submit/incident_categories">Incident Categories<span class="sr-only">(current)</span></a>
+            </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                 Reports
