updated report for involved students to be only one field, comma separated

--- a/submit/templates/submit/report.html
+++ b/submit/templates/submit/report.html
@@ -47,33 +47,22 @@
       </div>
     </div>
     <!-- Involved Students Section -->
-    <div class="section"  style="margin-top: 20px; ">
-      <h2>Involved Students/Staff</h2>
-        <h5>Please provide their UVA computing ID</h5>
-      <div class="form-group">
-        <label for="student1">Involved 1:</label>
-        <input
-          type="text"
-          id="student1"
-          name="student1"
-          class="form-control"
-          placeholder="eg. mst3k"
-          required
-        />
-      </div>
-      <div class="form-group">
-        <label for="student2">Involved 2:</label>
-        <input
-          type="text"
-          id="student2"
-          name="student2"
-          class="form-control"
-          placeholder="eg. mst3k"
-          />
-          <!-- should not be required to have 2? -->
-      </div>
-      <!-- Add more fields as needed -->
+    <div class="section" style="margin-top: 20px;">
+        <h2>Involved Students/Staff</h2>
+        <h5>Please provide their UVA computing IDs, separated by commas and a space (e.g., mst3k, csz6wd, rvb2n)</h5>
+        <div class="form-group">
+            <label for="student_ids">Involved:</label>
+            <input
+                type="text"
+                id="student_ids"
+                name="student_ids"
+                class="form-control"
+                placeholder="e.g., mst3k, csz6wd, rvb2n"
+                required
+            />
+        </div>
     </div>
+
     <!-- Incident Summary Section -->
     <div class="section" style="margin-top: 20px;">
       <h2>Incident Summary</h2>
