adjusted to take students involved as csv in single textfield and store cleanly

--- a/submit/templates/submit/report.html
+++ b/submit/templates/submit/report.html
@@ -49,28 +49,17 @@
     <!-- Involved Students Section -->
     <div class="section"  style="margin-top: 20px; ">
       <h2>Involved Students/Staff</h2>
-        <h5>Please provide their UVA computing ID</h5>
+        <h5>Please provide their UVA computing IDs, separated by commas</h5>
       <div class="form-group">
-        <label for="student1">Involved 1:</label>
+        <label for="students_involved">Involved Parties:</label>
         <input
-          type="text"
-          id="student1"
-          name="student1"
+          type="text" 
+          id="students_involved"
+          name="students_involved"
           class="form-control"
-          placeholder="eg. mst3k"
+          placeholder="e.g. abc1de, fgh2ij, klm3no"
           required
         />
-      </div>
-      <div class="form-group">
-        <label for="student2">Involved 2:</label>
-        <input
-          type="text"
-          id="student2"
-          name="student2"
-          class="form-control"
-          placeholder="eg. mst3k"
-          />
-          <!-- should not be required to have 2? -->
       </div>
       <!-- Add more fields as needed -->
     </div>
