--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -49,7 +49,7 @@
 
              <ul class="navbar-nav ml-auto">
                 <!-- Conditional rendering based on user's sign-in status -->
-                {% if user.is_authenticated %}
+                {% if user.profile.is_authenticated %}
                     {% if user.profile.is_admin %}
                         <li class="nav-item">
                             <a class="nav-link" href="/shared/admin_home">
