--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -1,19 +1,25 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <meta name="description" content="" />
+    <meta name="author" content="" />
     <title>{% block title %}{% endblock %}</title>
-    {% load bootstrap5 %}
-    {% bootstrap_css %}
-    {% bootstrap_javascript %}
+    {% load bootstrap5 %} {% bootstrap_css %} {% bootstrap_javascript %}
 
     <!-- CSS for navbar + sticky footer (could be applied to the rest of the project) -->
-    <link href="../../static/submit/sticky-footer-navbar.css" rel="stylesheet">
-    <link href="https://use.fontawesome.com/releases/v5.15.3/css/all.css" rel="stylesheet">
-
+    <link
+      href="../../static/submit/sticky-footer-navbar.css"
+      rel="stylesheet"
+    />
+    <link
+      href="https://use.fontawesome.com/releases/v5.15.3/css/all.css"
+      rel="stylesheet"
+    />
   </head>
 
   <body>
@@ -21,46 +27,78 @@
       <!-- Fixed navbar -->
       <nav class="navbar navbar-expand-md navbar-dark fixed-top navbar-custom">
         <a class="navbar-brand ps-4" href="#">Hoos Reporting Honor</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarCollapse"
+          aria-controls="navbarCollapse"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <ul class="navbar-nav mr-auto">
             <li class="nav-item active">
-              <a class="nav-link" href="https://honor.virginia.edu/">Honor Code<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="https://honor.virginia.edu/"
+                >Honor Code<span class="sr-only">(current)</span></a
+              >
             </li>
             <li class="nav-item dropdown">
-              <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                id="navbarDropdown"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
                 Reports
               </a>
               <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="/submit">Make a Report</a></li>
-                <li><a class="dropdown-item" href="/history/lookup">Find Report</a></li> <!-- case id lookup -->
-                <li><hr class="dropdown-divider"></li>
-                <li><a class="dropdown-item" href="#">Dashboard (must login)</a></li> <!--  if not logged in, will lead them directly to login page. if not, directs to appropriate dashboard? -->
+                <li>
+                  <a class="dropdown-item" href="/submit">Make a Report</a>
+                </li>
+                <li>
+                  <a class="dropdown-item" href="/history/lookup"
+                    >Find Report</a
+                  >
+                </li>
+                <!-- case id lookup -->
+                <li><hr class="dropdown-divider" /></li>
+                <li>
+                  <a class="dropdown-item" href="#">Dashboard (must login)</a>
+                </li>
+                <!--  if not logged in, will lead them directly to login page. if not, directs to appropriate dashboard? -->
               </ul>
             </li>
           </ul>
-{#          <ul class="navbar-nav ml-auto">#}
-{#              <!-- Conditional rendering based on user's sign-in status -->#}
-{#              {% if user.profile.is_admin %}#}
-{#              <li class="nav-item">#}
-{#                <a class="nav-link" href="/shared/admin_home">#}
-{#                    <i class="fas fa-sign-in-alt"></i> Account#}
-{#                </a>#}
-{#              </li>#}
-{#              {% else if user.is_authenticated %}#}
-{#              <li>#}
-{#                <a class="nav-link" href="/shared/common">#}
-{#                    <i class="fas fa-sign-in-alt"></i> Account#}
-{#                </a>#}
-{#              </li>#}
-{#              {% else %}#}
-{#              <li class="nav-item">#}
-{#                <a class="nav-link" href="/login">Sign In</a>#}
-{#              </li>#}
-{#              {% endif %}#}
-{#            </ul>#}
+          {#
+          <ul class="navbar-nav ml-auto">
+            #} {#
+            <!-- Conditional rendering based on user's sign-in status -->#} {#
+            {% if user.profile.is_admin %}#} {#
+            <li class="nav-item">
+              #} {#
+              <a class="nav-link" href="/shared/admin_home"
+                >#} {# <i class="fas fa-sign-in-alt"></i> Account#} {# </a
+              >#} {#
+            </li>
+            #} {# {% else if user.is_authenticated %}#} {#
+            <li>
+              #} {#
+              <a class="nav-link" href="/shared/common"
+                >#} {# <i class="fas fa-sign-in-alt"></i> Account#} {# </a
+              >#} {#
+            </li>
+            #} {# {% else %}#} {#
+            <li class="nav-item">
+              #} {# <a class="nav-link" href="/login">Sign In</a>#} {#
+            </li>
+            #} {# {% endif %}#} {#
+          </ul>
+          #}
         </div>
       </nav>
     </header>
@@ -68,24 +106,43 @@
     <!-- Begin page content -->
     <main role="main" class="container">
       {% block main %}
-            <!-- actual submission content -->
+      <!-- actual submission content -->
       {% endblock %}
     </main>
 
     <footer class="footer">
       <div class="container">
-          {% block footer %}
-              <!-- !!! NEED TO DETERMINE footer content -->
-          {% endblock %}
+        {% block footer %}
+        <!-- !!! NEED TO DETERMINE footer content -->
+        {% endblock %}
       </div>
     </footer>
 
     <!-- Bootstrap core JavaScript
     ================================================== -->
     <!-- Placed at the end of the document so the pages load faster -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-{#    <script>window.jQuery || document.write('<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>')</script>#}
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+      crossorigin="anonymous"
+    ></script>
+    {#
+    <script>
+      window.jQuery ||
+        document.write(
+          '<script src="../../assets/js/vendor/jquery-slim.min.js"><\/script>'
+        );
+    </script>
+    #}
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
