updated home.html to properly have href

--- a/shared/templates/shared/home.html
+++ b/shared/templates/shared/home.html
@@ -1,5 +1,4 @@
-{% extends 'submit/base.html' %}s {% block title %}Start Submission{% endblock
-%} {% block main %}
+{% extends 'submit/base.html' %} {% block title %}Start Submission{% endblock%} {% block main %}
 <div class="container my-5">
   <header class="text-center mb-4">
     <h1>Welcome To Hoos Honor Reporting</h1>
@@ -9,8 +8,8 @@
     <div class="col-sm-6 col-lg-3 mb-4">
       <div class="card h-100">
         <div class="card-body">
-          <h5 class="card-title text-center" href="https://honor.virginia.edu/">
-            Understand The Code
+          <h5 class="card-title text-center">
+            <a href="https://honor.virginia.edu/">Understand The Code</a>
           </h5>
         </div>
       </div>
@@ -18,8 +17,8 @@
     <div class="col-sm-6 col-lg-3 mb-4">
       <div class="card h-100">
         <div class="card-body">
-          <h5 class="card-title text-center" href="/history/lookup">
-            Find Your Reports
+          <h5 class="card-title text-center" >
+            <a href="/history/lookup"> Find Your Reports</a>
           </h5>
         </div>
       </div>
@@ -27,14 +26,18 @@
     <div class="col-sm-6 col-lg-3 mb-4">
       <div class="card h-100">
         <div class="card-body">
-          <h5 class="card-title text-center" href="/submit">Submit a Report</h5>
+          <h5 class="card-title text-center" >
+              <a href="/submit"> Find Your Reports</a>
+          </h5>
         </div>
       </div>
     </div>
     <div class="col-sm-6 col-lg-3 mb-4">
       <div class="card h-100">
         <div class="card-body">
-          <h5 class="card-title text-center" href="/login">Sign In</h5>
+          <h5 class="card-title text-center" >
+              <a href="/login"> Sign In </a>
+          </h5>
         </div>
       </div>
     </div>
