modified name issue in home and base to point to the right link

--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -23,7 +23,7 @@
         <div class="top-strip"></div>
       <!-- Fixed navbar -->
       <nav class="navbar navbar-expand-md navbar-dark fixed-top navbar-custom">
-        <a class="navbar-brand ps-4" href="/home">Hoos Reporting Honor</a>
+        <a class="navbar-brand ps-4" href="">Hoos Reporting Honor</a>
         <button
           class="navbar-toggler"
           type="button"
