--- a/shared/templates/shared/home.html
+++ b/shared/templates/shared/home.html
@@ -27,7 +27,7 @@
       <div class="card h-100">
         <div class="card-body">
           <h5 class="card-title text-center" >
-              <a href="/submit"> Find Your Reports</a>
+              <a href="/submit"> Submit a Report</a>
           </h5>
         </div>
       </div>
