edited form names to match model fields

--- a/submit/templates/submit/report.html
+++ b/submit/templates/submit/report.html
@@ -20,7 +20,7 @@
         <input
           type="date"
           id="date"
-          name="date"
+          name="incident_date"
           class="form-control"
           required
         />
@@ -30,7 +30,7 @@
         <input
           type="text"
           id="location"
-          name="location"
+          name="incident_location"
           class="form-control"
           required
         />
@@ -70,7 +70,7 @@
         <label for="summary">Summary:</label>
         <textarea
           id="summary"
-          name="summary"
+          name="report_summary"
           class="form-control"
           rows="4"
           required
