changed action on form to call report view

--- a/submit/templates/submit/report.html
+++ b/submit/templates/submit/report.html
@@ -6,7 +6,7 @@
 <div class="container">
   <h1 class="mt-5">Incident Report Form</h1>
   <form
-    action="{% url 'submit:submission_complete' %}"
+    action="{% url 'submit:report' %}"
     method="post"
     enctype="multipart/form-data"
     class="mt-4"
