--- a/shared/templates/shared/admin_home.html
+++ b/shared/templates/shared/admin_home.html
@@ -13,20 +13,14 @@
   <tbody>
     {% for report in reports %}
     <tr>
-      <td><a href="{% url 'shared:report_detail' report.id %}">{{report.id}}</a></td>
+      <td>{{ report.id }}</td>
       <td>
-        {% if report.user %}
-            {{report.user.username}}
-        {% else %}
-            Anonymous
-        {% endif %}
+        {% if report.user %} {{report.user.username}} {% else %} Anonymous {%
+        endif %}
       </td>
-      <td>{{ report.submission_date }}</td>
+        <td>{{ report.submission_date }}</td>
       <td>
-        {% for file in report.file_set.all %}
-        <a href="{{ file.file.url }}" target="_blank">{{ file.file.name }}</a
-        ><br />
-        # adjust to how want to display {% endfor %}
+        <a href="{% url 'shared:report_detail' report.id %}">View Report</a>
       </td>
     </tr>
     {% endfor %}
