fixed block content mismatch between admin home and base.html

--- a/shared/templates/shared/admin_home.html
+++ b/shared/templates/shared/admin_home.html
@@ -1,4 +1,5 @@
-{% extends "submit/base.html" %} {% block content %}
+{% extends "submit/base.html" %} 
+{% block main %}
 <h1>Completed Reports</h1>
 
 <table>
