--- a/shared/templates/shared/view_files.html
+++ b/shared/templates/shared/view_files.html
@@ -1,3 +1,6 @@
+{% extends "submit/base.html" %} 
+{% block main %}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -17,3 +20,4 @@
     </ul>
 </body>
 </html>
+{% endblock %}
