--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -43,7 +43,7 @@
               >
             </li>
               <li class="nav-item active">
-              <a class="nav-link" href="/submit/incident_categories">Incident Categories<span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/submit/incident_categories.html">Incident Categories<span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item dropdown">
               <a
