--- a/submit/templates/submit/base.html
+++ b/submit/templates/submit/base.html
@@ -68,7 +68,7 @@
                 <!-- case id lookup -->
                 <li><hr class="dropdown-divider" /></li>
                 <li>
-                  <a class="dropdown-item" href="#">Dashboard (must login)</a>
+                  <a class="dropdown-item" href="/login_page">Dashboard (must login)</a>
                 </li>
                 <!--  if not logged in, will lead them directly to login page. if not, directs to appropriate dashboard? -->
               </ul>
