added footer to login and added padding into report

--- a/login/templates/login/login_page.html
+++ b/login/templates/login/login_page.html
@@ -39,3 +39,8 @@
     </div>
     </div>
 {% endblock %}
+{% block footer %}
+    <div class="text-center text-muted p-3">
+    CS3240 Team A22
+  </div>
+{% endblock %}
