reorganized admin home

--- a/history/templates/history/admin_home.html
+++ b/history/templates/history/admin_home.html
@@ -18,6 +18,7 @@
       <td>
         {% if report.user %} 
             {{report.user.username}} 
+            {{report.status}}
         {% else %}
             Anonymous
         {% endif %}
