--- a/submit/templates/submit/report.html
+++ b/submit/templates/submit/report.html
@@ -91,7 +91,7 @@
       </div>
     </div>
     <!-- Submit Button -->
-    <button type="submit" class="btn btn-primary">Submit</button>
+    <button type="submit" class="btn btn-primary" style="margin-top: 10px;margin-bottom: 20px;">Submit</button>
   </form>
 </div>
 {% endblock %}
