--- a/history/templates/history/lookup.html
+++ b/history/templates/history/lookup.html
@@ -1,14 +1,5 @@
-
-<!DOCTYPE html>
-<html lang="en" style="height: 100%">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Lookup</title>
-    {% load bootstrap5 %} {% bootstrap_css %}
-  </head>
-  <body>
-
+{% extends 'submit/base.html' %}
+{% block title %}Lookup{% endblock%}
 {% block content %}
 <div class="d-flex justify-content-center align-items-center vh-100">
     <div class="text-center">
@@ -24,4 +15,9 @@
     <button type="submit" class="btn btn-primary">Submit</button>
     </div>
 </div>
+{% endblock %}
+{% block footer %}
+    <div class="text-center text-muted p-3">
+    CS3240 Team A22
+  </div>
 {% endblock %}
