updated base url to redirect to home page

--- a/history/templates/history/dashboard.html
+++ b/history/templates/history/dashboard.html
@@ -30,3 +30,8 @@
 </table>
 
 {% endblock %}
+{% block footer %}
+    <div class="text-center text-muted p-3">
+    CS3240 Team A22
+  </div>
+{% endblock %}
