--- a/history/templates/history/report.html
+++ b/history/templates/history/report.html
@@ -43,3 +43,8 @@
 
 
 {% endblock %}
+{% block footer %}
+    <div class="text-center text-muted p-3">
+    CS3240 Team A22
+  </div>
+{% endblock %}
