--- a/history/templates/history/dashboard.html
+++ b/history/templates/history/dashboard.html
@@ -26,7 +26,7 @@
       <td>{{ report.status }}</td>
         <td>{{ report.submission_date }}</td>
       <td>
-        <a href="{% url 'shared:report_detail' report.id %}">View Report</a>
+        <a href="{% url 'history:report' report.id %}">View Report</a>
       </td>
     </tr>
     {% endfor %}
