--- a/history/templates/history/report.html
+++ b/history/templates/history/report.html
@@ -15,7 +15,9 @@
 
 
 {% for file in report.files.all %}
-    <a href="{% url 'shared:render_object_from_s3' s3_object_url=file.get_file_url %}">{{ file.file.name }}</a>
+    <li>
+        <a href="{% url 'shared:render_object_from_s3' s3_object_url=file.get_file_url %}" target="_blank">{{ file.file.name }}</a>
+    </li>
 {% endfor %}
 
 
